--- a/html/eolico.html
+++ b/html/eolico.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
-<title>Parque eólico Paraguaná</title>
+<title>Parque Paraguaná</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="..\css\w3.css">
 <link rel="stylesheet" href="..\css\mapa_esri.css">
 <link rel="stylesheet" href="..\fonts\Raleway\Raleway.css">
 <link rel="stylesheet" href="..\fonts\font-awesome\font-awesome.min.css">
+<link rel="icon" href="../favicon.ico" type="image/x-icon">
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -14,40 +15,40 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-   <span class="w3-bar-item w3-left"><img src="..\imagenes/geoinnova.jpg" class="w3-margin-left" style="width:100px;height:50px"></span>
-  <span class="w3-bar-item w3-right"><img src="..\imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:40px"></span>
-   <span class="w3-bar-item w3-right"><h3>Actividad Final de Curso</h3></span>
+   <span class="w3-bar-item w3-left"><img src="../imagenes/geoinnova.jpg" class="w3-margin-left" style="width:180px;height:70px"></span>
+  <span class="w3-bar-item w3-right"><img src="../imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:55px"></span>
+   <span class="w3-bar-item w3-right"><h1>Actividad Final de Curso</h1></span>
 </div>
   
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s8 w3-bar">
-      <span><h3>Parque eólicio <strong>Paraguaná</h3></strong></span>
+      <span><h3>Parque eólico</h3<strong><h2>Paraguaná</h2></strong></span>
     </div>
   </div>
   <hr>
   <div class="w3-container">
     <h4><strong>Evaluación del Proyecto</strong></h4>
   </div>
-  <div class="w3-bar-block">
-    <a href="..\index.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i>Datos generales</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-lightbulb-o fa-fw"></i>Analisis eólico</a>
-    <a href="solar.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sun-o fa-fw"></i>Analisis solar</a>
-	<a href="conclusion.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-legal fa-fw"></i>Conclusiones</a>
+  <div class="w3-bar-block w3-medium">
+    <a href="..\index.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i> Datos generales</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-lightbulb-o fa-fw"></i> Analisis eólico</a>
+    <a href="solar.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sun-o fa-fw"></i> Analisis solar</a>
+	<a href="conclusion.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-legal fa-fw"></i> Conclusiones</a>
   </div>
 </nav>
 
-
 <!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay">
+</div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px;margin-top:43px;">
+<div class="w3-main" style="margin-left:300px;margin-top:80px;">
 
   <!-- Header -->
   <header class="w3-container" style="padding-top:22px">
-    <h4><b><i class="fa fa-pencil-square-o"></i> Analisis eólico</b></h4>
+    <h3><b><i class="fa fa-pencil-square-o"></i> Analisis eólico</b></h3>
   </header>
 
   <div class="w3-row-padding w3-margin-bottom">
@@ -164,10 +165,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           </tr>
          </table>
       </div><br>
+	  <div class="w3-medium w3-panel w3-margin-right">
 	  <p>Datos obtenidos de la aplicación web <a href "https://globalwindatlas.info/" target="_blank">Global Wind Atlas</a>, mediciones correspondiente a los vientos a una altitud de 50 m, con resolución espacial de 10x10 Km. Se tomaron valores de seis (6) puntos distribuidos dentro del área de estudio. En base a estos datos la velocidad del viento promedio es de 8,48 m/s y la densidad de potencia ronda los 509 mW.</p>
+	  </div>
     </div>
   </div>
   <hr>
+  
   <div class="w3-container">
     <h5><strong>Capacidades de generación eólica</strong></h5>
     <p>Potencial de generación</p>
@@ -188,6 +192,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <p>Afectación ambiental</p>
     <div class="w3-grey">
       <div class="w3-container w3-center w3-padding w3-blue" style="width:25%">25%</div>
+	</div>
 	</div>
   <hr>
 
@@ -223,16 +228,32 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <p>Fuente: <strong>CORPOELEC</strong></p>
   </div>
   <hr>
+  
+  <div class="w3-container">
+    <h5><strong>Mapa potencial eólico</strong></h5>
+    <ul class="w3-ul w3-card-4 w3-white">
+      <li class="w3-padding-16">
+			  <!-- Mapa ArcGis On line incrustado -->
+		<div class="embed-container">
+		   <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Parque Eólico Paraguaná" src="//www.arcgis.com/apps/Embed/index.html?webmap=41223a7042714e50899c92858fe5f86a&extent=-70.2728,11.7805,-70.1648,11.836&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
+		   </iframe>
+		</div>
+      </li>
+    </ul>
+  </div>
+  <hr>
+	
   <div class="w3-container">
     <h5><strong>Análisis de resultados</strong></h5>
     <ul class="w3-ul w3-card-4 w3-white">
       <li class="w3-padding-16">
-		<span class="w3-medium">
+		<div class="w3-medium w3-panel w3-margin-right">
 		<p>Los análisis realizados a los geodatos obtenidos en la web, en especial los suministrados por la aplicación Global Wind Atlas, hace inferir que la velocidad de los vientos definidos como base fundamental para el análisis de la ubicación más óptima del parque eólico Paraguaná  de 8,5 m/s, se podría tomar como cierta ya que el sistema suministró mediciones que rondan los 8,48 m/s, valores muy cercanos a lo propuesto en el estudio de factibilidad del proyecto. Estas pequeñas diferencias de la velocidad de los vientos no afecta significativamente el rendimiento de los aerogeneradores instalados.</p> 
         <p>Otro aspecto importante es que el parque eólico se ubicó en un lugar despejado y abierto al mar, con poca pendiente, no hay presencia de colinas ni montañas a su alrededor, que puedan afectar los vientos a baja altura.
         La cartografía básica con que se cuenta, nos permite visualizar poca presencia de infraestructuras de grandes dimensiones, como por ejemplo: edificaciones elevadas que podrían afectar el flujo de los vientos al rededor del parque eólico.</p>
         <p>También el lugar cuenta con infraestructura eléctrica de conexión al SEN y la sub estación eléctrica Los Taques construida dentro del parque eólico.</p> 
-        <p>El estudio no encontró problemas en el potencial eólico para generar los 100 mW propuestos en proyecto, algunos factores externos, como por ejemplo la aplicación de un eficiente programa de mantenimiento a los aerogeneradores, puede afectar directamente el rendimiento del parque eólico y consecuentemente explicaría la baja productividad obtenida.</p></span>
+        <p>El estudio no encontró problemas en el potencial eólico para generar los 100 mW propuestos en proyecto, algunos factores externos, como por ejemplo la aplicación de un eficiente programa de mantenimiento a los aerogeneradores, puede afectar directamente el rendimiento del parque eólico y consecuentemente explicaría la baja productividad obtenida.</p>
+		</div>
       </li>
     </ul>
   </div>
@@ -255,8 +276,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <a href="#" class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
 	    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
       </div>
-    </div>
-  <br>
+	  </div>
+    </div><br>
+	
   <div class="w3-container w3-dark-grey w3-padding-small">
     <div class="w3-row">
 	<h3>Curso: Geodatos en aplicaciones web</h3>
